Issue #7531 Use different artifact for ClassLoaderServlet test
Signed-off-by: Jan Bartel <janb@webtide.com>